--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,7 @@ body {
     max-width: 900px;
     box-shadow: 0 15px 40px rgba(0, 0, 0, 0.08);
     border-radius: 20px;
+    text-align: center;
     position: relative;
 }
 
@@ -219,6 +220,15 @@ body {
     margin-top: 4rem;
 }
 
+.rsvp-section p{
+    font-size: 1.2rem;
+}
+
+
+.rsvp-section #timedisplay{
+    font-size: 1.2rem;
+    margin: 1.5rem 0;
+}
 .cta-button {
     display: inline-flex;
     align-items: center;
