--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .red {
-    background-color: #EAE0C8;
+    background-color: #FAE7B5;
   }
   .green {
     background-color: #EBC2AF;
